# spider

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cached_course_numbers_ucsc_2025_winter.pkl  dataset.py  execute.py  main.py  models.py  process.py  pyproject.toml  res.txt  spiders.py
schools/ucr/: server.py
src/: dataset.py  execute.py  models.py  process.py  rmp_spider.py  settings.py  spiders.py
src/schools/UCI/: server.py
src/schools/ucd/: extract.py  server.py
src/schools/uci/: server.py
src/schools/ucla/: server.py  test.py
src/schools/ucr/: extract.py  server.py
src/schools/ucsc/: server.py  utils.py
src/schools/ucsd/: mock.py  server.py
src/schools/ucsf/: server.py
src/schools/usf/: server.py
