[tool.poetry]
name = "spider-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pgvector = "^0.3.6"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
