[tool.poetry]
name = "spider-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pgvector = "^0.3.6"
openai = "^1.58.1"
pandas = "^2.2.3"
langchain-text-splitters = "^0.3.4"
beautifulsoup4 = "^4.12.3"
langchain-openai = "^0.2.14"
langchain = "^0.3.13"
snowflake-id = "^1.0.2"
typing-extensions = "^4.12.2"
python-dotenv = "^1.0.1"
greenlet = "^3.1.1"
httpx = {extras = ["socks"], version = "^0.28.1"}
httpx-sse = "^0.4.0"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
selenium-wire = "^5.1.0"
selenium = "^4.27.1"
blinker = "^1.9.0"
async-cron = "^1.6.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
